
[workspace]
resolver = "2"
members = [
    "plastic_core", "plastic_ui", "plastic_tui",
]
default-members = ["plastic_ui"]

[profile.dev]
opt-level = 2

[profile.release]
lto = true
opt-level = 3

[profile.ci]
inherits = "dev"
incremental = false
opt-level = 1
codegen-units = 16
debug = false
overflow-checks = false
lto = false

