[package]
name = "apu2a03"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

bitflags = "^1.2.1"

[dependencies.rodio]
version = "^0.11.0"
default-features = false 
features = []


