[package]
name = "cartridge"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

serde = { version = "1.0.115", features = ["derive"] }
bincode = "1.3.1"

[dev-dependencies]
nes_tester = { path = "../nes_tester" }
