[package]
name = "cpu6502"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"


[dependencies]
common = { path = "../common" }
serde = { version = "1.0.115", features = ["derive"] }
bincode = "1.3.1"

# for testing only
[dev-dependencies]
nes_tester = { path = "../nes_tester" }
