[package]
name = "nes_test"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cartridge = { path = "../cartridge" }
common = { path = "../common" }
cpu6502 = { path = "../cpu6502" }
ppu2c02 = { path = "../ppu2c02" }
display = { path = "../display" }

sfml = "^0.15.1"
