[package]
name = "nes_tester"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apu2a03 = { path = "../apu2a03" }
cartridge = { path = "../cartridge" }
common = { path = "../common" }
cpu6502 = { path = "../cpu6502" }
display = { path = "../display" }
ppu2c02 = { path = "../ppu2c02" }
