[package]
name = "nes_ui_gtk"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nes_ui_base = { path = "../nes_ui_base" }

gtk = "^0.8.1"
gio = "^0.8.1"
glib = "^0.9.3"
gdk = "^0.12.1"

[dependencies.cairo-rs]
version = "^0.8.1"
features = ["v1_14"]
