[package]
name = "nes_ui_gtk"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plastic_core = { path = "../plastic_core" }

gtk = "0.9.2"
gio = "0.9.1"
glib = "0.10.2"
gdk = "0.13.2"
gdk-pixbuf = "0.9.0"

[dependencies.cairo-rs]
version = "0.9.0"
features = ["v1_16", "png"]
