[package]
name = "nes_ui_native_windows"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# this package as a whole is only for windows
[target.'cfg(windows)'.dependencies]
plastic_core = { path = "../plastic_core" }

native-windows-gui = "^1.0.3"
native-windows-derive = "^1.0.1"
winapi = "^0.3.9"
