[package]
name = "nes_ui_tui"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nes_ui_base = { path = "../nes_ui_base" }

crossterm = "^0.17"
tui = { git = "https://github.com/fdehau/tui-rs", default-features = false, features = ['crossterm'] }
gilrs = "^0.7.4"
