[package]
name = "plastic_core"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "^1.2.1"

serde = { version = "1.0.115", features = ["derive"] }
bincode = "1.3.1"

