[package]
name = "plastic_core"
version = "0.3.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"
description = "An accurate NES emulator. The backend emulation for plastic and plastic-tui"
readme = "../README.md"
repository = "https://github.com/Amjad50/plastic"
license = "MIT"
keywords = ["nes", "nintendo", "emulator"]
categories = ["emulators"]

[dependencies]
bitflags = "^1.2.1"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

