[package]
name = "plastic_core"
version = "0.3.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"
description = "An accurate NES emulator. The backend emulation for plastic and plastic-tui"
readme = "../README.md"
repository = "https://github.com/Amjad50/plastic"
license = "MIT"
keywords = ["nes", "nintendo", "emulator"]
categories = ["emulators"]

[dependencies]
bitflags = "^1.2.1"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[features]
# This provide some extra `common` functionality used by my frontends,
# in the future, it might be better to move this to a separate crate.
# but for simpler deployment, I'm keeping it here for now.
frontend_misc = []

