[package]
name = "plastic_tui"
version = "0.3.1"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"
description = "An accurate NES emulator. Front-end terminal interface (TUI) for plastic-core"
readme = "../README.md"
repository = "https://github.com/Amjad50/plastic"
license = "MIT"
keywords = ["nes", "nintendo", "tui", "emulator"]
categories = ["emulators"]

[dependencies]
plastic_core = { path = "../plastic_core", version = "0.3", features = ["frontend_misc"] }

crossterm = "0.28"
gilrs = "0.11"
dynwave = "0.1.0"
ratatui = "0.28.1"

