[package]
name = "plastic_tui"
version = "0.3.4"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"
description = "A NES emulator with terminal interface (TUI)"
readme = "../README.md"
repository = "https://github.com/Amjad50/plastic"
license = "MIT"
keywords = ["nes", "nintendo", "tui", "emulator"]
categories = ["emulators"]

[dependencies]
plastic_core = { path = "../plastic_core", version = "0.3", features = ["frontend_misc"] }

crossterm = "0.28"
gilrs = "0.11"
dynwave = "0.2"
ratatui = "0.28"
tui-menu = "0.2.4"
directories = "5.0"
ratatui-explorer = "0.1.2"

