[package]
name = "plastic"
version = "0.3.1"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"
description = "An accurate NES emulator. Front-end for plastic-core"
readme = "../README.md"
repository = "https://github.com/Amjad50/plastic"
license = "MIT"
keywords = ["nes", "nintendo", "emulator"]
categories = ["emulators"]

[dependencies]
plastic_core = { path = "../plastic_core", version = "0.3", features = ["frontend_misc"] }

egui = "0.29"
egui-winit = "0.29"
directories = "5.0"
eframe = "0.29"
rfd = "0.15"
dynwave = "0.1"

