[package]
name = "plastic_ui_tui"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plastic_core = { path = "../plastic_core" }

crossterm = "0.28"
gilrs = "^0.7.4"
dynwave = "0.1.0"
ratatui = "0.28.1"
