[package]
name = "ppu2c02"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"


[dependencies]
common = { path = "../common" }
display = { path = "../display" }

bitflags = "^1.2.1"

# for testing only
[dev-dependencies]
common = { path = "../common" }
display = { path = "../display" }
cartridge = { path = "../cartridge" }
cpu6502 = { path = "../cpu6502" }

